--- a/QtPurchasingExample.vcxproj.filters
+++ b/QtPurchasingExample.vcxproj.filters
@@ -18,6 +18,9 @@
     <Filter Include="Source Files\qtpurchasing">
       <UniqueIdentifier>{d177daba-737a-4c51-8aa6-e8ccbee9c68c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\qtpurchasing\win">
+      <UniqueIdentifier>{cbd8139d-e623-4fd9-b44f-b71886c0cfd4}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Test\main.cpp">
@@ -29,23 +32,20 @@
     <ClCompile Include="Test\shopmanager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Test\microsoftshop.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="Test\mylogger.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="Test\asyncstore.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Test\pch.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Test\qinappstore.cpp">
-      <Filter>Source Files\qtpurchasing</Filter>
+    <ClCompile Include="Test\qwininappproduct.cpp">
+      <Filter>Source Files\qtpurchasing\win</Filter>
     </ClCompile>
-    <ClCompile Include="Test\qinapptransaction.cpp">
-      <Filter>Source Files\qtpurchasing</Filter>
+    <ClCompile Include="Test\qwininapptransaction.cpp">
+      <Filter>Source Files\qtpurchasing\win</Filter>
+    </ClCompile>
+    <ClCompile Include="Test\qwinstrorebridge.cpp">
+      <Filter>Source Files\qtpurchasing\win</Filter>
     </ClCompile>
     <ClCompile Include="Test\qinappproduct.cpp">
       <Filter>Source Files\qtpurchasing</Filter>
@@ -56,6 +56,15 @@
     <ClCompile Include="Test\qinapppurchasebackendfactory.cpp">
       <Filter>Source Files\qtpurchasing</Filter>
     </ClCompile>
+    <ClCompile Include="Test\qinappstore.cpp">
+      <Filter>Source Files\qtpurchasing</Filter>
+    </ClCompile>
+    <ClCompile Include="Test\qinapptransaction.cpp">
+      <Filter>Source Files\qtpurchasing</Filter>
+    </ClCompile>
+    <ClCompile Include="Test\qwininapppurchasebackend.cpp">
+      <Filter>Source Files\qtpurchasing\win</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Test\window.h">
@@ -64,25 +73,31 @@
     <QtMoc Include="Test\shopmanager.h">
       <Filter>Source Files</Filter>
     </QtMoc>
-    <QtMoc Include="Test\microsoftshop.h">
-      <Filter>Source Files</Filter>
-    </QtMoc>
     <QtMoc Include="Test\mylogger.h">
       <Filter>Source Files</Filter>
     </QtMoc>
-    <QtMoc Include="Test\asyncstore.h">
-      <Filter>Source Files</Filter>
+    <QtMoc Include="Test\qwininappproduct_p.h">
+      <Filter>Source Files\qtpurchasing\win</Filter>
     </QtMoc>
-    <QtMoc Include="Test\qinappstore.h">
-      <Filter>Source Files\qtpurchasing</Filter>
+    <QtMoc Include="Test\qwininapppurchasebackend_p.h">
+      <Filter>Source Files\qtpurchasing\win</Filter>
     </QtMoc>
-    <QtMoc Include="Test\qinapptransaction.h">
-      <Filter>Source Files\qtpurchasing</Filter>
+    <QtMoc Include="Test\qwininapptransaction_p.h">
+      <Filter>Source Files\qtpurchasing\win</Filter>
+    </QtMoc>
+    <QtMoc Include="Test\qwinstorebridge.h">
+      <Filter>Source Files\qtpurchasing\win</Filter>
     </QtMoc>
     <QtMoc Include="Test\qinappproduct.h">
       <Filter>Source Files\qtpurchasing</Filter>
     </QtMoc>
     <QtMoc Include="Test\qinapppurchasebackend_p.h">
+      <Filter>Source Files\qtpurchasing</Filter>
+    </QtMoc>
+    <QtMoc Include="Test\qinappstore.h">
+      <Filter>Source Files\qtpurchasing</Filter>
+    </QtMoc>
+    <QtMoc Include="Test\qinapptransaction.h">
       <Filter>Source Files\qtpurchasing</Filter>
     </QtMoc>
   </ItemGroup>
@@ -95,10 +110,10 @@
     <ClInclude Include="Test\pch.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="Test\qinappstore_p.h">
+    <ClInclude Include="Test\qinapppurchasebackendfactory_p.h">
       <Filter>Source Files\qtpurchasing</Filter>
     </ClInclude>
-    <ClInclude Include="Test\qinapppurchasebackendfactory_p.h">
+    <ClInclude Include="Test\qinappstore_p.h">
       <Filter>Source Files\qtpurchasing</Filter>
     </ClInclude>
   </ItemGroup>
